# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: cli.py  const.py  engine.py
brain_games/games/: calc_src.py  even_src.py  gcd_src.py  prime_src.py  progression_src.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
src/animated-text/src/: index.pug
